# landmark

./: index.html  package-lock.json  package.json  vite.config.ts
src/: App.module.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  main.rs  spaces.rs
src/components/: SpaceItem.module.css  SpaceItem.tsx  SpaceList.module.css  SpaceList.tsx
src/hooks/: useSpaces.ts
src/styles/: global.css
