[package]
name = "landmark"
version = "0.1.0"
description = "macOS Space manager in the menu bar"
edition = "2021"

[[bin]]
name = "landmark"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libloading = "0.9"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation-sys = "0.8"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
